--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
-    "koa-cors": "^0.0.16",
+    "koa2-cors": "^2.0.6",
     "koa-logger": "^3.2.1",
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0"
